Changelog for Poi
=================


2.0a2 (unreleased)
------------------

- Send parameter names in notifications
  [sargo]

- Polish translation update
  [sargo]

- Do not completely remove the title field in the PSC tracker, but
  only make it invisible while editing.  This makes sure that
  folder_contents does not throw an error trying to find the title
  field.
  [maurits]

- Clean up type definitions (mostly: do not try to hide the
  properties/metadata tab that already is no longer there).
  [maurits]


2.0a1 (2010-02-27)
------------------

- Depend on collective.watcherlist >= 0.2 for sending the resolved
  email only to the initial poster.
  [maurits]

- Polish translation
  [sargo]
  
- Compatibility with Chameleon
  [sargo]
 
- Minor fixes for i18n support
  [sargo]

- Added upgrade step to remove the local Manager role from all tracker
  managers and instead give them the TrackerManager role.
  [maurits]

- Define our permissions in zcml and configure them in rolemap.xml.
  [maurits]

- Added TrackerManager role.  Give this role to users mentioned in the
  managers field of a tracker, instead of the more powerful Manager
  role.
  [maurits]

- Removed ``skins/Poi/poi_issue_quicksearch.py`` in favour of our new
  ``@@poi_issue_quicksearch`` view.
  [maurits]

- Removed ``skins/Poi/toggleWatchingIssue.py`` in favour of our new
  ``@@toggle_watching`` view.
  [maurits]

- Removed ``skins/Poi/poi_niceName.py`` in favour of the new
  ``@@pas_member`` view from PlonePAS.
  [maurits]

- Removed ``skins/Poi/poi_issue_post.cpy`` and use an event handler on
  IObjectInitializedEvent of an issue instead.  Added upgrade step to
  remove the now unneeded form controller action for this, as it would
  otherwise give: ValueError: Unable to find poi_issue_post.
  [maurits]

- Moved fully to GenericSetup.
  [maurits]

- Added minimum versions for AddRemoveWidget and DataGridField in
  setup.py, to make sure we get versions that are compatible with