@@ -33,6 +33,12 @@
 
   <subscriber
       for="Products.Poi.interfaces.IIssue
+           Products.Archetypes.interfaces.IObjectEditedEvent"
+        handler=".events.add_contact_to_issue_watchers"
+        />
+
+  <subscriber
+      for="Products.Poi.interfaces.IIssue
            Products.DCWorkflow.interfaces.IAfterTransitionEvent"
         handler=".events.mail_issue_change"
         />
