@@ -60,8 +60,9 @@ def linkSvn(text, svnUrl, patterns):
             linktext = text[res.start(): res.end()]
             rev = getNumberFromString(linktext)
 
-            pos = res.start()+1
-            link = '<a href="' + svnUrl %{'rev': rev} + '">'+linktext+'</a>'
+            pos = res.start() + 1
+            link = '<a href="' + svnUrl % {'rev': rev} + '">' + linktext + \
+                '</a>'
             text = text[0: pos-1] + link + text[res.end():]
             pos += len(link)
 
